--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -10,7 +10,7 @@
                 {% endfor %}
             </div>
         {% endif %}
-
+        <br>
         <!-- Log in Section -->
         <h3>Log In <small class="text-muted">and Collaborate With Other Programmers!</small></h3>
         <hr>
@@ -38,7 +38,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <div class="col-8">
+                        <div class="col-md-8">
                             <input type="submit" value="Login" class="btn btn-success">
                             <input type="hidden" name="next" value="{{ next }}">
                             <a class="btn btn-primary ml-5" href="{% url 'accounts:signup' %}">Sign Up</a>
