--- a/templates/base.html
+++ b/templates/base.html
@@ -11,13 +11,10 @@
     <link href="{% static 'css/login.css' %}" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-secondary text-uppercase" id="mainNav">
+    <nav class="navbar navbar-expand-lg bg-dark text-uppercase" id="mainNav">
         <div class="container">
           <a class="navbar-brand js-scroll-trigger" href="/">Codefuse</a>
-          <!-- <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            Menu
-            <i class="fas fa-bars"></i>
-          </button> -->
+          
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item mx-0 mx-lg-1">
@@ -37,7 +34,7 @@
               {% else %}
                   <!-- logout -->
                         <li class="nav-item mx-0 mx-lg-1">
-                            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'projects:add_project' %}">Add Code</a>
+                            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'projects:add_project' %}">Add Project</a>
                         </li>
                   <!-- profile -->
               {% endif %}
