--- a/accounts/templates/accounts/profile/show_profile.html
+++ b/accounts/templates/accounts/profile/show_profile.html
@@ -15,10 +15,21 @@
         <p><strong>Developer?</strong>: {% if user.developer %}Developer{% else %}General{% endif %}</p>
         <br>
         <!-- Links to Change Profile Info, or Delete Account -->
+    </div>
+    <div class="container">
+        <h3>Open Projects:</h3>
+        {% if projects %}
+            {% for project in projects %}
+                {% include 'partials/project-view.html' %}
+            {% endfor %}
+        {% else %}
+            <p>No projects to display. Want to add a new project? <a href="codefuse.herokuapp.com/projects/add-project">Click Here!</a></p>
+        {% endif %}
+    </div>
+    <div class="container">
         <div class="row">
             <a class="btn btn-info mr-5" href="{% url 'accounts:update-profile' status.id %}">Update Profile</a>
             <a href="#" class="btn btn-danger">Delete Account</a>
         </div>
     </div>
-
 {% endblock %}
