updated signup page

--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -30,7 +30,7 @@
                             {% for error in field.errors %}
                                 <p class="text-danger">{{ error }}</p>
                             {% endfor %}
-
+                        {% endfor %}
                       <!-- username field -->
                       <div class="form-group row">
                           <div class="col-8">
